--- a/MSGraph-FirstApp/MSGraph-FirstApp/MSGraph-FirstApp.csproj
+++ b/MSGraph-FirstApp/MSGraph-FirstApp/MSGraph-FirstApp.csproj
@@ -1,15 +1,14 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>MSGraph_FirstApp</RootNamespace>
+    <UserSecretsId>ae4bd129-7991-4401-a516-4f919788e3df</UserSecretsId>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.2" />
     <PackageReference Include="Microsoft.Graph" Version="1.21.0" />
     <PackageReference Include="Microsoft.Identity.Client" Version="4.8.2" />
   </ItemGroup>
-
 </Project>
