--- a/MSGraph-FirstApp/MSGraph-FirstApp.Tests/MSGraph-FirstApp.Tests.csproj
+++ b/MSGraph-FirstApp/MSGraph-FirstApp.Tests/MSGraph-FirstApp.Tests.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FakeItEasy" Version="6.0.0" />
     <PackageReference Include="FluentAssertions" Version="5.10.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.0" />
